<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    tools:context=".detail.DetailActivity">

  <ImageView
      android:id="@+id/img_item_photo"
      android:layout_width="501dp"
      android:layout_height="416dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      tools:srcCompat="@tools:sample/avatars" />

  <LinearLayout
      android:layout_width="411dp"
      android:layout_height="385dp"
      android:orientation="vertical"
      android:background="@drawable/shape_rectangle_white"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent">

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/blue_dark"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:textSize="24sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/idr"
        android:textColor="@color/orange"
        android:layout_marginTop="8dp"
        android:layout_marginStart="24dp"
        android:textSize="14sp"/>

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price"
        android:textColor="@color/orange"
        android:layout_marginTop="-19dp"
        android:layout_marginStart="53dp"/>

    <LinearLayout
        android:layout_width="362dp"
        android:layout_height="58dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:background="@color/white_grey"
        android:orientation="horizontal">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginTop="18dp">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/ic_dollar" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textColor="@color/grey_second"/>


        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/ic_timer" />

        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textColor="@color/grey_second"/>

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginTop="4dp"
            app:srcCompat="@drawable/ic_star_blue" />

        <TextView
            android:id="@+id/tv_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="TextView"
            android:textColor="@color/grey_second"/>
      </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/blue_dark"
        android:layout_marginTop="24dp"
        android:layout_marginStart="24dp"
        android:textSize="16sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_desc"
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="24dp"
        android:text="@string/detail"
        android:textColor="@color/grey_second"/>

    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginStart="30dp"
        android:text="@string/checkout_now"
        android:textStyle="bold"
        android:background="@drawable/shape_rectangle_button_chekout"/>
  </LinearLayout>

  <ImageView
      android:id="@+id/btn_back"
      android:layout_width="45dp"
      android:layout_height="31dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:srcCompat="@drawable/ic_back" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="16dp"
      android:text="@string/food_details"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.393"
      app:layout_constraintStart_toEndOf="@+id/btn_back"
      app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>